--- a/src/layouts/Layout.less
+++ b/src/layouts/Layout.less
@@ -1,4 +1,8 @@
-
+:global{
+	.ant-layout{
+		background-color: #fff!important;
+	}
+}
 .normal {
   font-family: Georgia, sans-serif;
   text-align: center;
@@ -45,6 +49,8 @@
 			.rightCell{
 				img{
 					height: 30px;
+					width: 30px;
+					border-radius: 50%;
 					display: inline-block;
 					vertical-align: middle;
 				}
