--- a/src/pages/blog/Index.less
+++ b/src/pages/blog/Index.less
@@ -26,7 +26,7 @@
 	}
 }
 .page{
-	text-align: center;
+	text-align: right;
 	& > ul{
 		display: inline-block;
 	}
@@ -49,7 +49,10 @@
 	}
 	.right{
 		& > span{
-			padding: 0 5px;
+			padding: 0 10px;
+			& > a{
+				color: @theme-color;
+			}
 		}
 		& > img{
 			height: 30px;
@@ -65,6 +68,10 @@
 		line-height: 26px;
 		margin-bottom: 10px;
 	}
+}
+.funBox{
+	text-align: center;
+	padding: 30px 0;
 }
 .btn{
 	text-align: center;
@@ -92,8 +99,11 @@
 				color: rgba(0,0,0,.5);
 			}
 			.right{
-
-			}
+				.ii{
+					font-size: 14px;
+					margin-right: 5px;
+				}
+			}	
 		}
 		&:hover{
 			box-shadow: 0 0 10px rgba(0,0,0,.2);
@@ -112,7 +122,7 @@
 
 	}
 	.right{
-
+		text-align: right;
 	}
 }
 
