--- a/src/pages/login/Login.less
+++ b/src/pages/login/Login.less
@@ -126,3 +126,28 @@
 		}
 	}
 }
+
+.commentlist{
+	padding: 0 20px;
+	& > li{
+		line-height: 22px;
+		margin-bottom: 10px;
+		border-bottom: 1px solid rgba(0,0,0, .05);
+		padding: 0 0 5px 0;
+		& > span{
+			display: inline-block;
+			margin-right: 20px;
+		}
+		.people{
+			color: @theme-color;
+			cursor: pointer;
+		}
+		.time{
+			font-size: 12px;
+			color: #ccc;
+		}
+		.arts{
+			cursor: pointer;
+		}
+	}
+}
