--- a/src/pages/blog/Index.less
+++ b/src/pages/blog/Index.less
@@ -49,7 +49,7 @@
 	}
 	.right{
 		& > span{
-			padding: 0 10px;
+			padding: 0 5px;
 			& > a{
 				color: @theme-color;
 			}
@@ -57,6 +57,10 @@
 		& > img{
 			height: 30px;
 			border-radius: 50%;
+			border: 1px solid rgba(0,0,0,.1);
+		}
+		.tags{
+			cursor: pointer;
 		}
 	}
 }
