--- a/src/pages/login/Login.less
+++ b/src/pages/login/Login.less
@@ -151,3 +151,25 @@
 		}
 	}
 }
+
+
+.followers{
+
+	& > li{
+		display: flex;
+		align-items: center;
+		cursor: pointer;
+		& > img{
+			height: 30px;
+			width: 30px;
+			border: 1px solid rgba(0,0,0,.2);
+			border-radius: 50%;
+		}
+		& > a{
+			flex: 1;
+			padding-left: 10px;
+		}
+	}
+}
+
+
