--- a/src/pages/blog/Index.less
+++ b/src/pages/blog/Index.less
@@ -133,7 +133,7 @@
 
 
 .formBox{
-	padding: 40px;
+	// padding: 40px;
 }
 
 
@@ -231,7 +231,12 @@
 }
 
 
-
+:global{
+	.my-editor{
+		border: 1px solid rgba(0,0,0,.2);
+		// max-height: 300px;
+	}
+}
 
 
 
