--- a/src/layouts/Layout.less
+++ b/src/layouts/Layout.less
@@ -38,9 +38,20 @@
 		margin: 0 auto;
 		height: 100%;
 		overflow: hidden;
+		display: flex;
+		align-items: center;
 		.img{
 			height: 30px;
-			margin-top: 15px;
+			& > img{
+				height: 30px;
+			}
+		}
+		.middle{
+			flex: 1;
+			padding: 0 40px;
+			a{
+				font-size: 16px;
+			}
 		}
 		.right{
 			float: right;
