--- a/src/less/Index.less
+++ b/src/less/Index.less
@@ -1,5 +1,5 @@
 @font-size-base: 14px;
-@theme-color: #2584bd;
+@theme-color: #019BF0;
 @theme: #F08E1C;
 @heading-color: rgba(0,0,0,.85);
 @black: #000;
@@ -10,6 +10,7 @@
 @text-color-secondary: fade(@black, 45%);
 @text-color: fade(@black, 65%);
 
+@width: 1024px;
 // Extra small screen / phone
 @screen-xs: 480px;
 @screen-xs-min: @screen-xs;
