--- a/src/pages/blog/Index.less
+++ b/src/pages/blog/Index.less
@@ -3,6 +3,7 @@
 .blogBox{
 	width: 1024px;
 	margin: 0 auto;
+	overflow-y: auto;
 	.title{
 		line-height: 90px;
 		text-align: center;
@@ -26,9 +27,23 @@
 	}
 }
 .page{
-	text-align: right;
-	& > ul{
+	padding-bottom: 20px;
+	text-align: center;
+	& > span{
 		display: inline-block;
+		padding: 6px 15px;
+		border-radius: 20px;
+		border: 1px solid #ccc;
+		cursor: pointer;
+		transition: all ease-in .2s;
+		&:hover{
+			color: @theme-color;
+			border-color: @theme-color;
+		}
+	}
+	& > i{
+		font-style: normal;
+		color: #ccc;
 	}
 }
 
