--- a/src/pages/blog/People.less
+++ b/src/pages/blog/People.less
@@ -4,19 +4,24 @@
 	width: 1024px;
 	margin: 0 auto;
 	padding: 20px;
-	
-	.avatar{
-		display: inline-block;
-		height: 100px;
-		width: 100px;
-		border-radius: 50%;
-		overflow: hidden;
-		border: 1px solid #f5f5f5;
-		margin-bottom: 20px;
-		& > img{
-			height: 100%;
-			width: 100%;
+	.top{
+		position: relative;
+		.avatar{
+			display: inline-block;
+			height: 100px;
+			width: 100px;
+			border-radius: 50%;
+			overflow: hidden;
+			border: 1px solid #f5f5f5;
+			margin-bottom: 20px;
+			& > img{
+				height: 100%;
+				width: 100%;
+			}
 		}
+	}
+	.basicBox{
+		margin-bottom: 40px;
 	}
 	.care{
 		float: right;
@@ -24,7 +29,7 @@
 	.title{
 		font-size: 16px;
 		line-height: 32px;
-		margin: 20px 0;
+		margin: 10px 0;
 		& > span{
 			font-size: 12px;
 			padding: 0 6px;
