--- a/src/pages/login/Login.less
+++ b/src/pages/login/Login.less
@@ -2,17 +2,18 @@
 .loginBox{
 	width: 100%;
 	min-height: 100vh;
-	background-color: #fff;
+	// background-color: #fff;
 	
 	.login_form{
 		width: 400px;
 		position: absolute;
 		left: 50%;
 		top: 50%;
-		transform: translate(-50%, -50%);
+		transform: translate(-50%, -40%);
 		box-shadow: 0 0 10px rgba(0,0,0,.5);
-		padding: 30px;
+		padding: 30px 30px 0 30px;
 		border-radius: 5px;
+		background-color: #fff;
 		& > h1{
 			text-align: center;
 			margin-bottom: 10px;
@@ -56,21 +57,138 @@
 
 
 .personBox{
-	width: 1024px;
-	margin: 0 auto;
 	text-align: center;
-	padding: 20px;
 	img{
 		// height: 100%;
 		width: 104px;
 		height: 104px;
 	}
+	.inner{
+		width: 1024px;
+		margin: 0 auto;
+	}
+	.box{
+		padding-top: 20px;
+		display: flex;
+		.left{
+			width: 320px;
+			padding-right: 20px;
+		}
+		.right{
+			flex: 1;
+			padding-left: 10px;
+			border-left: 1px solid #f5f5f5;
+		}
+		.anim-content{
+			width: 90%;
+			margin: 0 auto;
+			.li{
+				display: flex;
+				align-items: center;
+				line-height: 32px;
+				text-align: left;
+				font-size: 14px;
+				margin-bottom: 5px;
+				& > div:nth-child(1){
+					flex: 1;
+				}
+				& > div:nth-child(2){
+					text-align: right;
+					font-size: 12px;
+					color: rgba(0,0,0,.5);
+				}
+			}
+			.comli{
+				line-height: 22px;
+				margin-bottom: 10px;
+				border-bottom: 1px solid rgba(0,0,0, .05);
+				padding: 0 0 5px 0;
+				text-align: left;
+				& > span{
+					display: inline-block;
+					margin-right: 20px;
+				}
+				.people{
+					color: @theme-color;
+					cursor: pointer;
+				}
+				.time{
+					font-size: 12px;
+					color: #ccc;
+				}
+				.arts{
+					cursor: pointer;
+					color: @theme-color;
+				}
+			}
+			.foli{
+				display: flex;
+				align-items: center;
+				cursor: pointer;
+				margin-bottom: 15px;
+				& > img{
+					height: 30px;
+					width: 30px;
+					border: 1px solid rgba(0,0,0,.2);
+					border-radius: 50%;
+				}
+				& > a{
+					// flex: 1;
+					padding-left: 10px;
+				}
+			}
+		}
+	}
 	.content{
 		text-align: left;
 	}
+	.ins{
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		z-index: 1;
+	}
+	.til{
+		text-align: left;
+		margin-bottom: 10px;
+	}
+	.list{
+		margin-top: 30px;
+		text-align: left;
+		.active{
+			background-color: rgba(1, 155, 240, .4);
+			color: #fff;
+		}
+		& > li{
+			line-height: 32px;
+			padding: 0 10px;
+			border-radius: 5px;
+			margin-bottom: 5px;
+			cursor: pointer;
+			transition: all ease-in .1s;
+			.clearfix();
+			& > span:nth-child(1){
+				float: left;
+			}
+			& > span:nth-child(2){
+				float: right;
+			}
+			&:hover{
+				background-color: rgba(1, 155, 240, .4);
+				color: #fff;
+			}
+		}
+	}
+	:global{
+		.ant-form-item-label{
+			line-height: 22px;
+		}
+	};
 	.avatarBox{
 		display: inline-block;
-		margin: 0 auto;
+		width: 100%;
+		height: 300px;
 		:global{
 			.ant-upload.ant-upload-select-picture-card{
 				border-radius: 50%;
@@ -83,6 +201,7 @@
 			}
 		};
 	}
+
 	.read{
 		display: inline-block;
 		margin-right: 20px;
@@ -92,8 +211,19 @@
 		display: inline-block;
 		margin-left: 8px;
 		cursor: pointer;
+		color: @theme-color;
 		&:hover{
-			color: @theme-color;
+			color: darken(@theme-color, 10%);
+		};
+	}
+	.delIcon{
+		font-size: 16px;
+		display: inline-block;
+		margin-left: 8px;
+		cursor: pointer;
+		color: red;
+		&:hover{
+			color: darken(red, 10%);
 		};
 	}
 }
@@ -128,7 +258,7 @@
 }
 
 .commentlist{
-	padding: 0 20px;
+	// padding: 0 20px;
 	& > li{
 		line-height: 22px;
 		margin-bottom: 10px;
@@ -159,6 +289,7 @@
 		display: flex;
 		align-items: center;
 		cursor: pointer;
+		margin-bottom: 10px;
 		& > img{
 			height: 30px;
 			width: 30px;
