--- a/src/pages/animate/Single.less
+++ b/src/pages/animate/Single.less
@@ -31,6 +31,14 @@
 		background-color: @theme-color;
 		margin: 20px;
 	}	
+
+	.cell2{
+		width: 400px;
+		height: 400px;
+		background-color: @theme-color;
+		margin: 0 auto;
+		line-height: 400px;
+	}
 }
 
 :global{
