--- a/src/layouts/Layout.less
+++ b/src/layouts/Layout.less
@@ -42,9 +42,9 @@
 		display: flex;
 		align-items: center;
 		.img{
-			height: 30px;
+			height: 40px;
 			& > img{
-				height: 30px;
+				height: 100%;
 			}
 		}
 		.middle{
