--- a/src/pages/animate/Tool.less
+++ b/src/pages/animate/Tool.less
@@ -91,5 +91,27 @@
 }
 
 
+.text{
+	background: #ffc;
+	min-height: 1300px;
+	& > p{
+		line-height: 42px;
+		font-size: 20px;
+	}
+	&box{
+		color: red;
+	}
+}
+
+.bt{
+	width: 40px;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+	background: #cfc;
+	border-radius: 5px;
+}
+
+
 
 
