--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -9,7 +9,7 @@
 <% } %>
 </head>
 <body>
-
+<script src="module.js" type="text/javascript" charset="utf-8"></script>
 <div id="<%= context.config.mountElementId %>"></div>
 </body>
 </html>
